--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/katariinamahkonen/fullstackopen_part3#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0"
