--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "nodemon": "^2.0.19"
   }
 }
